aggiunta sezione info

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
         </div>
     </section>
     <!-- end portfolio  -->
+
+    <!-- info  -->
+    <section>
+        <div class="info-background">
+
+        </div>
+    </section>
+    <!-- end info  -->
     
     
 
