--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section>
         <div class="jumbotron">
             <div class="jumbotron-content">
-                <img src="" alt="">
+                <img src="img/avatar.svg" alt="avatar">
                 <h1>START BOOTSTRAP</h1>
                 <div class="star">&#9733;</div>
                 <h4>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h4>
