--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
                 <div class="hidden-xs col-sm-6 col-md-4 col-lg-4 top-nav-menu">
                     <ul>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">CONTACTS</a></li>
+                        <li><a href="#portfolio">PORTFOLIO</a></li>
+                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="#contacts">CONTACTS</a></li>
                     </ul>
                 </div>
 
@@ -54,7 +54,7 @@
 
     <!-- MAIN  -->
     <!-- portfolio  -->
-    <section>
+    <section id="portfolio">
         <div class="section-title">
             <h2>PORTFOLIO</h2>
             <div class="line"></div>
@@ -106,7 +106,7 @@
     <!-- end portfolio  -->
 
     <!-- about  -->
-    <section class="about-section">
+    <section id="about" class="about-section">
         
         <div class="section-title white-title">
                 <h2>ABOUT</h2>
@@ -139,7 +139,7 @@
     <!-- end about  -->
 
     <!-- contacts  -->
-    <section>
+    <section id="contacts">
         <div class="section-title">
             <h2>CONTACT ME</h2>
             <div class="line"></div>
@@ -166,7 +166,7 @@
                             </div>
 
                             <div class="form-group">
-                                <textarea name="Message" class="form-control" cols="30" rows="10">Message</textarea>
+                                <textarea name="Message" class="form-control" cols="30" rows="10" placeholder="Message"></textarea>
                             </div>
                         </form>
                               
@@ -198,11 +198,11 @@
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <div class="footer-content-col">
                         <h5>AROUND THE WEB</h5>
-                        <ul>
-                            <li>Facebook</li>
-                            <li>Google+</li>
-                            <li>Twitter</li>
-                            <li>Linkedin</li>
+                        <ul class="social">
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
                 </div>
