--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
             <div class="small-wrapper">
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem illo, voluptas labore consequatur magnam maiores voluptatem soluta excepturi non, expedita quam et voluptates consectetur sapiente perferendis, minus autem fugit aut.</p> 
+                            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p> 
                     </div>
     
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem illo, voluptas labore consequatur magnam maiores voluptatem soluta excepturi non, expedita quam et voluptates consectetur sapiente perferendis, minus autem fugit aut.</p>
+                           <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                     </div>
                 </div>
                     
