--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!-- HEADER  -->
     <!-- top nav  -->
-    <section class="top-nav">
+    <nav class="top-nav">
         <div class="container">
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-8 col-lg-8">
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </nav>
     <!-- end top nav  -->
 
     <!-- jumbotron  -->
